# hocon-zed-extension

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  extension.toml  extension.wasm  send_message.sh  test-server.sh  test.conf  test.hocon
grammars/: hocon.wasm
hocon-language-server/: Cargo.toml
hocon-language-server/src/: main.rs
languages/hocon/: config.toml  highlights.scm  injections.scm  outline.scm
src/: lib.rs
