[package]
name = "hocon-language-server"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[dependencies]
# Error handling
anyhow = "1.0.71"
env_logger = "0.10.0"
# Logging
log = "0.4.17"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
# LSP implementation
tower-lsp = "0.19.0"

